# citybus

./: .gitignore  Makefile  README.md  docker-compose.yml
.github/: pull_request_template.md
backend/: .env.example  README.md  alembic.ini  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial_schema.py
backend/app/: main.py
backend/app/api/v1/: router.py
backend/app/api/v1/endpoints/: live.py  planner.py  routes.py  stops.py  trips.py
backend/app/core/: config.py  database.py  exceptions.py  gtfs_time.py  logging.py
backend/app/models/: __init__.py  agency.py  base.py  calendar.py  calendar_date.py  route.py  service.py  shape.py  shape_point.py  stop.py  stop_time.py  trip.py  vehicle_position.py
backend/app/repositories/: connection_repository.py  route_repository.py  service_repository.py  stop_repository.py  trip_repository.py  vehicle_position_repository.py
backend/app/schemas/: common.py  live.py  planner.py  route.py  stop.py  trip.py
backend/app/services/: csa.py  gtfs_import_service.py  planner_service.py  realtime_service.py  route_service.py  stop_service.py  trip_service.py
backend/app/tests/: conftest.py  test_gtfs_time.py  test_planner_api.py  test_planner_csa.py  test_realtime.py  test_routes.py  test_stops.py  test_trips.py
backend/app/websocket/: handlers.py  manager.py
backend/scripts/: import_gtfs.py  simulate_realtime.py
docs/: architecture.md  database.md  erd.mmd  git-workflow.md
mobile/: README.md  analysis_options.yaml  build.yaml  flutter_native_splash.yaml  pubspec.yaml
(+91 files in other folders)
