[project]
name = "citybus-backend"
version = "0.1.0"
description = "CityBus transit system backend (FastAPI + PostGIS)"
requires-python = ">=3.11"

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = [
    "B008",  # function call in argument default — FastAPI Depends() idiom
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["app/tests"]
